--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -28,16 +28,15 @@
             android:layout_weight="2">
 
             <TextView
-                android:id="@+id/textView11"
+                android:id="@+id/temperature_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:text="59 ℉"
-                android:textSize="25dp"
-                android:fontFamily="@font/bold_font"
-                android:textColor="@color/temp_color"
                 android:layout_below="@+id/imageView9"
-                />
+                android:layout_marginLeft="8dp"
+                android:fontFamily="@font/bold_font"
+                android:text="     ℉"
+                android:textColor="@color/temp_color"
+                android:textSize="25dp" />
 
             <ImageView
                 android:id="@+id/imageView9"
