--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -43,28 +43,28 @@
         android:inputType="textEmailAddress"
         android:paddingLeft="@dimen/edittext_left_padding"
         android:fontFamily="@font/normal_font"
-        app:layout_constraintEnd_toStartOf="@+id/check_btn"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
         app:layout_constraintTop_toBottomOf="@+id/email_text"
 
         />
 
-    <ImageButton
-        android:id="@+id/check_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginTop="5dp"
-        android:background="@null"
-        android:padding="10dp"
-        android:src="@drawable/search"
-        app:layout_constraintEnd_toEndOf="@+id/guideline_right"
-        app:layout_constraintRight_toLeftOf="@+id/email"
+    <!--<ImageButton-->
+        <!--android:id="@+id/check_btn"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginStart="2dp"-->
+        <!--android:layout_marginLeft="2dp"-->
+        <!--android:layout_marginTop="5dp"-->
+        <!--android:background="@null"-->
+        <!--android:padding="10dp"-->
+        <!--android:src="@drawable/search"-->
+        <!--app:layout_constraintEnd_toEndOf="@+id/guideline_right"-->
+        <!--app:layout_constraintRight_toLeftOf="@+id/email"-->
 
-        app:layout_constraintStart_toEndOf="@+id/email"
-        app:layout_constraintTop_toBottomOf="@+id/email_text" />
+        <!--app:layout_constraintStart_toEndOf="@+id/email"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/email_text" />-->
 
     <!--<TextView-->
         <!--android:id="@+id/check_text"-->
@@ -123,7 +123,7 @@
         app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <EditText
-        android:id="@+id/password1"
+        android:id="@+id/password_confirm"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginTop="5dp"
@@ -148,10 +148,10 @@
         app:layout_constraintEnd_toEndOf="@+id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
-        app:layout_constraintTop_toBottomOf="@+id/password1" />
+        app:layout_constraintTop_toBottomOf="@+id/password_confirm" />
 
     <EditText
-        android:id="@+id/password_confirm"
+        android:id="@+id/fname"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginTop="5dp"
@@ -174,7 +174,7 @@
         app:layout_constraintEnd_toEndOf="@+id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
-        app:layout_constraintTop_toBottomOf="@+id/password_confirm" />
+        app:layout_constraintTop_toBottomOf="@+id/fname" />
 
     <EditText
         android:id="@+id/last_name"
@@ -213,7 +213,7 @@
         app:layout_constraintTop_toBottomOf="@+id/sex">
 
         <RadioButton
-            android:id="@+id/radioButton9"
+            android:id="@+id/man_radioButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -223,7 +223,7 @@
             app:layout_constraintStart_toStartOf="@id/guideline_left" />
 
         <RadioButton
-            android:id="@+id/radioButton7"
+            android:id="@+id/woman_radioButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
