--- a/app/src/main/res/layout/activity_air_history.xml
+++ b/app/src/main/res/layout/activity_air_history.xml
@@ -107,12 +107,14 @@
         android:layout_height="0dp"
         android:layout_weight="1.4"
         android:orientation="vertical"
+
         >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
+            android:padding="4dp"
             >
             <Button
                 android:id="@+id/btn_pm"
